Backend v1.0
Create le funzionalità per ottenere lo stream di un utente e il suo profilo come da OpenAPI documentation.

Prima versione del backend completata!
