# doc/api.yaml
@@ -13,7 +13,7 @@ info:
     1. **Photo Stream:**
        - Each user is presented with a dynamic stream of photos in reverse chronological order.
        - The stream provides essential information, including the date and time of each photo's upload, and the number of likes and comments it has received.
-       - The photo stream is curated with images from users you are "following."
+       - The photo stream is curated with images from users you are following.
 
     2. **Interactions:**
        - Users can like photos uploaded by other users and remove their likes at any time.
@@ -24,7 +24,7 @@ info:
 
     4. **User Profiles:**
        - Each user has a personal profile page, displaying their photos in reverse chronological order.
-       - Users can see how many photos they've uploaded and the number of followers and following users.
+       - Users can see how many photos they've uploaded and the number of followers and followed users.
     
     5. **User Actions:**
        - Users have the freedom to change their usernames, upload photos, remove photos, and follow/unfollow other users.
@@ -437,8 +437,8 @@ paths:
       operationId: getUserProfile
       summary: get user profile
       description: |
-        allows getting user's profile information passing the uid and
-        his upload post stream in reverse chronological order
+        allows getting user's profile information passing the uid.
+        The return values will be all the user information and his upload post stream in reverse chronological order
       responses:
         '200':
           description: |
@@ -452,7 +452,7 @@ paths:
                   all the post uploaded.
                 type: object
                 properties:
-                  profileinfo:
+                  profile_info:
                     $ref: '#/components/schemas/profileinfo'
                   uploaded_posts:
                     description: contains all the post as array of post object.
@@ -634,7 +634,11 @@ paths:
               type: object
               properties:
                 comment:
-                  $ref: '#/components/schemas/comment'
+                  properties:
+                    uid:
+                      $ref: '#/components/schemas/comment/properties/uid'
+                    message:
+                      $ref: '#/components/schemas/comment/properties/message'
 
       responses:
         "201":
@@ -645,8 +649,8 @@ paths:
                 description: server returns comment id associated to the post comment.
                 type: object
                 properties:
-                  commentid:
-                    $ref: '#/components/schemas/commentid'
+                  comment:
+                    $ref: '#/components/schemas/comment'
         "400": { $ref: "#/components/responses/BadRequest" }
         "401": { $ref: "#/components/responses/UnauthorizedError" }
         "500": { $ref: "#/components/responses/InternalServerError" }
@@ -791,11 +795,13 @@ components:
           $ref: '#/components/schemas/commentid'
         uid:
           $ref: '#/components/schemas/userID'
+        postid:
+          $ref: '#/components/schemas/postid'
         message:
           title: message written
           description: the effective message of the comment
           type: string
-          minLength: 0
+          minLength: 1
           maxLength: 256
           pattern: ^[a-zA-Z0-9.,!?;:'"\s]+$
           example: a cr4zy comment!
@@ -818,6 +824,8 @@ components:
       properties:
         postid:
           $ref: '#/components/schemas/postid'
+        uid:
+          $ref: '#/components/schemas/userID'
         likes:
           title: number of likes
           description: represents the like number of the photo
@@ -846,10 +854,8 @@ components:
       description: consists in all the personal information of the user.
       type: object
       properties:
-        uid:
-          $ref: '#/components/schemas/userID'
-        username:
-          $ref: '#/components/schemas/username'
+        user:
+          $ref: '#/components/schemas/user'
         numpost:
           description: is the amount of all the post uploaded by the user.
           title: the number of uploaded post
@@ -864,7 +870,7 @@ components:
           example: 10
         following:
           description: is the number of account followed by the user.
-          title: the number of following
+          title: the number of followed
           type: integer
           minimum: 0
           example: 10
